# furball

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: ODBC-API-REFERENCE.md  ODBC-FOR-ADONET-DEVELOPERS.html  ODBC-FOR-ADONET-DEVELOPERS.md
src/: attr.rs  catalog.rs  connect.rs  diagnostics.rs  execute.rs  fetch.rs  handle.rs  lib.rs  runtime.rs  types.rs
tests/: CMakeLists.txt  integration.py  test_catalog.cpp  test_connection.cpp  test_datatypes.cpp  test_edge_cases.cpp  test_errors.cpp  test_execution.cpp  test_getdata.cpp  test_getfunctions.cpp  test_helpers.h  test_metadata.cpp  test_parameters.cpp  test_transactions.cpp
